# hyprspace

.github/workflows/: flutter_build.yml
hyprspace_flutter/: README.md  pubspec.yaml
hyprspace_flutter/lib/: app_router.dart  main.dart
hyprspace_flutter/lib/core/config/: config_model.dart  config_model.freezed.dart  config_model.g.dart  config_repository.dart  crypto_manager.dart
hyprspace_flutter/lib/core/network/: connection_manager.dart  packet_handler.dart  vpn_native_bridge.dart  vpn_service.dart
hyprspace_flutter/lib/core/storage/: database.dart  database.g.dart  secure_storage.dart
hyprspace_flutter/lib/core/utils/: logger.dart  platform_utils.dart  validators.dart
hyprspace_flutter/lib/features/home/data/: vpn_repository_impl.dart
hyprspace_flutter/lib/features/home/domain/: vpn_repository.dart
hyprspace_flutter/lib/features/home/presentation/pages/: home_page.dart
hyprspace_flutter/lib/features/home/presentation/widgets/: peer_list_item.dart  vpn_status_card.dart
hyprspace_flutter/lib/shared/theme/: app_theme.dart
hyprspace_flutter/lib/shared/widgets/: error_dialog.dart  loading_overlay.dart
hyprspace_flutter/native/go/: cgo_windows_compat.c  go.mod  go.sum  hyprspace_bridge.go  tun_linux.go  tun_windows.go
hyprspace_flutter/native/linux/: CMakeLists.txt
hyprspace_flutter/native/windows/: CMakeLists.txt
hyprspace_flutter/test/integration/: app_launch_test.dart
hyprspace_flutter/test/unit/core/config/: config_model_test.dart  validators_test.dart
hyprspace_flutter/test/unit/core/network/: connection_manager_test.dart  connection_manager_test.mocks.dart  packet_handler_test.dart  packet_handler_test.mocks.dart
hyprspace_flutter/test/widget/: peer_list_item_test.dart  vpn_status_card_test.dart
(+4 files in other folders)
